[package]
name = "vbackup"
version = "2.0.5"
authors = ["Julian Ulrich <vbackup@lujanu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
argparse = "0.2.2"
rumqtt = "0.31.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_derive = "1.0.104"
env_logger = "0.7.1"
chrono = "0.4.10"
glob = "0.3.0"
fs2 = "0.4.3"
ping = "0.2.0"
dns-lookup = "1.0.4"