[package]
name = "vbackup"
version = "2.8.3"
authors = ["Julian Ulrich <vbackup@lujanu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
argparse = "0.2.2"
rumqttc = { version = "0.22.0", default-features = false }
crossbeam-channel = "0.5.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_derive = "1.0.104"
env_logger = "0.10.0"
chrono = "0.4.10"
glob = "0.3.0"
fs2 = "0.4.3"
ping = "0.4.0"
dns-lookup = "1.0.4"
rand="0.8.5"
